Added Bus model so we can track multiple buses on a bus line
