# routes/api.php
@@ -17,19 +17,18 @@ use Illuminate\Support\Facades\Route;
 
 Route::group(['prefix' => 'v1'], function () {
     Route::group(['middleware' => 'auth:sanctum'], function () {
-//        Route::get('/user', function (Request $request) {
-//            return $request->user();
-//        });
-
         Route::post('/logout', [\App\Http\Controllers\AuthenticationController::class, 'logout']);
 
         Route::post('bus-lines', [\App\Http\Controllers\BusLineController::class, 'store']);
         Route::delete('bus-lines/{busLine}', [\App\Http\Controllers\BusLineController::class, 'destroy']);
         Route::post('bus-lines/{busLine}/schedule', [\App\Http\Controllers\BusScheduleController::class, 'store']);
         Route::delete('bus-lines/{busLine}/schedule', [\App\Http\Controllers\BusScheduleController::class, 'destroy']);
-        Route::post('bus-lines/{busLine}/update-location', [\App\Http\Controllers\BusLineController::class, 'updateLocation']);
 
         Route::delete('bus-stops/{busStop}', [\App\Http\Controllers\BusStopController::class, 'destroy']);
+
+        Route::get('buses', [\App\Http\Controllers\BusController::class, 'index']);
+        Route::post('buses' , [\App\Http\Controllers\BusController::class, 'store']);
+        Route::delete('buses/{bus}', [\App\Http\Controllers\BusController::class, 'destroy']);
     });
 
     Route::post('/login', [\App\Http\Controllers\AuthenticationController::class, 'login']);
@@ -39,6 +38,7 @@ Route::group(['prefix' => 'v1'], function () {
 
     Route::get('bus-lines/{busLine}/schedule', [\App\Http\Controllers\BusScheduleController::class, 'index']);
 
+    Route::post('buses/update-location', [\App\Http\Controllers\BusController::class, 'updateLocation']);
 
     Route::get('bus-stops', [\App\Http\Controllers\BusStopController::class, 'index']);
     Route::get('bus-stops/{busStop}', [\App\Http\Controllers\BusStopController::class, 'show']);
