# storage/api-docs/api-docs.json
@@ -119,6 +119,188 @@
                 ]
             }
         },
+        "/buses": {
+            "get": {
+                "tags": [
+                    "Bus"
+                ],
+                "summary": "Get a list of all buses",
+                "operationId": "bb4526731b4cbb1a8e10a02da4c2412a",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Bus"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Bus"
+                ],
+                "summary": "Create a new bus",
+                "operationId": "df1fab631f549ed09727f347554c2f74",
+                "requestBody": {
+                    "description": "Bus object that needs to be added",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/BusCreate"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Bus created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Bus"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthenticatedError"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ValidationError"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/buses/{bus}": {
+            "delete": {
+                "tags": [
+                    "Bus"
+                ],
+                "summary": "Delete a bus",
+                "operationId": "1363bde87f34438284d8a049e34a992f",
+                "parameters": [
+                    {
+                        "name": "bus",
+                        "in": "path",
+                        "description": "ID of the bus that needs to be deleted",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthenticatedError"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Bus not found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/bus/update-location": {
+            "post": {
+                "tags": [
+                    "Bus"
+                ],
+                "summary": "Updates the current location of a bus",
+                "description": "Updates the current location of a bus",
+                "operationId": "updateBusLocation",
+                "requestBody": {
+                    "description": "The key, longitude and latitude of the update",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "key",
+                                    "longitude",
+                                    "latitude"
+                                ],
+                                "properties": {
+                                    "key": {
+                                        "type": "string",
+                                        "example": 123
+                                    },
+                                    "longitude": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": -122.4194
+                                    },
+                                    "latitude": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": 37.7749
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "204": {
+                        "description": "Bus line location updated successfully, busLocationUpdateEvent dispatched"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/bus-lines": {
             "get": {
                 "tags": [
@@ -231,9 +413,7 @@
                         "description": "Bus line not found"
                     }
                 }
-            }
-        },
-        "/api/bus-lines/{busLine}": {
+            },
             "delete": {
                 "tags": [
                     "Bus Lines"
@@ -257,84 +437,6 @@
                 "responses": {
                     "204": {
                         "description": "Bus line deleted successfully"
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/UnauthenticatedError"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Bus line not found"
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            }
-        },
-        "/api/bus-lines/{busLine}/update-location": {
-            "post": {
-                "tags": [
-                    "Bus Lines"
-                ],
-                "summary": "Updates the current location of a specific bus",
-                "description": "Updates the current location of a specific bus",
-                "operationId": "updateBusLocation",
-                "parameters": [
-                    {
-                        "name": "busLine",
-                        "in": "path",
-                        "description": "ID of the bus line",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64",
-                            "example": 1
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "description": "The bus_id, longitude and latitude of the update",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "bus_id",
-                                    "longitude",
-                                    "latitude"
-                                ],
-                                "properties": {
-                                    "bus_id": {
-                                        "type": "integer",
-                                        "example": 123
-                                    },
-                                    "longitude": {
-                                        "type": "number",
-                                        "format": "float",
-                                        "example": -122.4194
-                                    },
-                                    "latitude": {
-                                        "type": "number",
-                                        "format": "float",
-                                        "example": 37.7749
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "204": {
-                        "description": "Bus line location updated successfully, busLocationUpdateEvent dispatched"
                     },
                     "401": {
                         "description": "Unauthorized",
@@ -1323,6 +1425,18 @@
                 },
                 "type": "object"
             },
+            "BusCreate": {
+                "properties": {
+                    "bus_line_id": {
+                        "type": "integer",
+                        "example": "122"
+                    }
+                },
+                "type": "object",
+                "example": {
+                    "bus_line_id": 122
+                }
+            },
             "BusLineCreate": {
                 "properties": {
                     "type": {
@@ -1427,6 +1541,28 @@
                                 "example": "The type field is required."
                             }
                         }
+                    }
+                },
+                "type": "object"
+            },
+            "Bus": {
+                "title": "Bus",
+                "description": "Bus model",
+                "properties": {
+                    "id": {
+                        "description": "The unique identifier of the bus.",
+                        "type": "integer",
+                        "format": "int64",
+                        "readOnly": true
+                    },
+                    "key": {
+                        "description": "The key of the bus.",
+                        "type": "string"
+                    },
+                    "bus_line_id": {
+                        "description": "The ID of the bus line that this bus belongs to.",
+                        "type": "integer",
+                        "format": "int64"
                     }
                 },
                 "type": "object"
